--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: rgb(237, 249, 254);
+    font: 19px Montserrat, "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.title {
+  font-size: 2.8rem;
+  font-weight: 800;
+  color: #2c3e50;
+  margin-bottom: 0.5rem;
+  text-align: center;
+}
+
+/* Description sous le titre */
+.subtitle {
+  font-size: 1.3rem;
+  color: #6c7a89;
+  text-align: center;
+  max-width: 900px;
+  margin: 0 auto 2rem auto; /* Centrage + espace */
+}
