--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <div class="container">
     <h1>Bienvenue sur mon Portfolio</h1>
-    <p>Développeur web passionné par la création d’expériences utilisateur modernes et performantes.</p>
+    <p>Etudiant en BUT Informatique passionné par la création d'applications modernes et performantes.</p>
     <a [routerLink]="['/projects']" class="btn">Voir mes projets</a>
   </div>
 </section>
@@ -10,11 +10,11 @@
   <div class="container">
     <h2>À propos de moi</h2>
     <div class="about-content">
-      <img src="/profil.JPG" alt="Photo de profil" class="profile-img" />
+      <img src="profil.JPG" alt="Photo de profil" class="profile-img" />
       <div class="about-text">
         <p>
-          Passionné par le développement web et les nouvelles technologies, je suis un développeur front-end et back-end
-          avec plusieurs années d'expérience. J'aime concevoir des interfaces modernes, intuitives et performantes.
+          Passionné par le développement web et les nouvelles technologies, je suis un étudiant en 2 éme année de BUT Informatique.
+          J'aime concevoir des interfaces modernes, intuitives et performantes.
         </p>
         <p>
           J’ai travaillé sur des projets variés, allant de sites vitrines aux applications web complexes. Mon objectif :
