--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="cv-download">
     <a href="/CV.pdf" download="CV_Robin_Mathieu.pdf">
-      Mon CV
+      Télécharger mon CV
     </a>
   </div>
 </nav>
